<resources>
    <string name="app_name">UF1_Proyecto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="list">Lists</string>
    <string name="menu">Menu</string>
    <string name="user">username</string>
    <string name="nearCinemas">Near Cinemas</string>
    <string name="home">Home</string>
    <string name="userPage">User Page</string>
    <string name="myMovies">My movies</string>
    <string name="myLists">My lists</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="lorem"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lobortis mollis vestibulum. Sed sed aliquet lectus. Duis vel ornare purus, eu sollicitudin massa. Nunc vitae massa mauris. Morbi elementum ac urna nec posuere. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed molestie elementum dolor tincidunt porta. Aliquam erat volutpat. </string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="errorSignUp">An error has occurred</string>
    <string name="errorLogIn">An error has occurred while try to logging in</string>
    <string name="logOut">Log Out</string>
    <string name="writeAMessage">Write a message</string>
    <string name="send">Send</string>
    <string name="map">Map</string>
    <string name="multicines">Multicines Compostela</string>
    <string name="numax">Numax Cine</string>
    <string name="loggingOut">Logging out</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="thisIsAMessage">This is a message</string>
    <string name="errorLoadReview">An error has occurred while try to load your review</string>
    <string name="errorSaveReview">An error has occurred while try to save your review</string>
    <string name="saveReview">Your review has been saved</string>
    <string name="userNotLogged">User not logged</string>
    <string name="nowPlaying">Now playing</string>
    <string name="popular">Popular</string>
    <string name="searchCinemas">Search cinemas nearby</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>