<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpFragment"
    android:background="@color/blue">

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/user"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/txt_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:paddingStart="15dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:background="@drawable/btn_background"
        android:text="@string/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
