<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CinesCercanosFragment">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="16dp"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <fragment
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            map:cameraTilt="30"
            map:cameraZoom="13"
            map:mapType="normal"
            map:uiCompass="false"
            map:uiRotateGestures="true"
            map:uiScrollGestures="true"
            map:uiTiltGestures="true"
            map:uiZoomControls="false"
            map:uiZoomGestures="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="16dp"
            android:text="@string/nearCinemas"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBuscarCines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/searchCinemas"
            android:layout_margin="8dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCinemasCercanos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

        <!--androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivCinema01"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cinema01"
                    app:layout_constraintEnd_toStartOf="@+id/tvCinema01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/tvCinema01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/multicines"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/ivCinema01"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivCinema02"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cinema02"
                    app:layout_constraintEnd_toStartOf="@+id/tvCinema02"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/tvCinema02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/numax"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/ivCinema02"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView-->
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
